# MicrosoftTask

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  FindLIBLINEAR.cmake  MainWindow.cpp  MainWindow.h  Makefile  MicrosoftTask  MicrosoftTask_automoc.cpp  READ_ME.txt  cmake_install.cmake  main.cpp  moc_MainWindow.cpp  moc_qcustomplot.cpp  preprocessdata.cpp  preprocessdata.h  saved_model.model
MicrosoftTask.app/Contents/: Info.plist
ProgrammingTask/: test_data.m
src/: MainWindow.cpp  MainWindow.h  logreg.cpp  logreg.h  preprocessdata.cpp  svmrankanalysis.cpp  svmrankanalysis.h
